--- a/src/components/clock.css
+++ b/src/components/clock.css
@@ -23,7 +23,7 @@
 }
 
 svg {
-  transform: rotate(-90deg);
+  transform: rotate(0deg);
   width: 100%;
   height: 100%;
 }
@@ -40,6 +40,9 @@ svg {
   stroke-width: 10;
   stroke-linecap: round;
   transition: stroke-dashoffset 0.3s ease;
+}
+.circle-progress.warning {
+  stroke: #ff5722;
 }
 
 .time {
