--- a/src/components/clock.css
+++ b/src/components/clock.css
@@ -22,27 +22,39 @@
   margin: 0 auto;
 }
 
-svg {
-  transform: rotate(0deg);
+.svg1 {
+  transform: rotate(70deg) scale(-1,1);
   width: 100%;
   height: 100%;
 }
 
+.svg2{
+  transform: rotate(360deg) ;
+  width: 100%;
+  height: 100%;
+}
 .circle-bg {
   fill: none;
   stroke: #eee;
   stroke-width: 10;
 }
-
+.empty{
+  fill: none;
+  stroke: none !important;
+}
 .circle-progress {
   fill: none;
-  stroke: #6a2f91;
+  /* stroke: #6a2f91; */
   stroke-width: 10;
   stroke-linecap: round;
   transition: stroke-dashoffset 0.3s ease;
 }
-.circle-progress.warning {
-  stroke: #ff5722;
+.addcolor{
+  fill: none;
+  stroke: #6a2f91 !important;
+}
+.warning {
+  stroke: none !important;
 }
 
 .time {
